<resources>
    <string name="app_name">MyMassenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_default_username">Ilja javorskij</string>
    <string name="settings_default_status">в сети</string>
    <string name="default_number">89650647892</string>
    <string name="settings_lable_number">Нажмите что бы изменить номер</string>
    <string name="default_username_cheng">Имя пользователя</string>
    <string name="setting_info">О себе</string>
    <string name="setting_ebaut_self">Напишите немного о себе</string>
    <string name="up_menu_chanch_name">изменить имя</string>
    <string name="exit">выход</string>
    <string name="your_phone">Ваш телефон</string>
    <string name="change_setting_name">Имя</string>
    <string name="change_setting_surname">Фамилия</string>
    <string name="ok">ok</string>
    <string name="data_update">данные обновлены</string>
    <string name="setting_change_username_hint">Username</string>
    <string name="change_bio_hint">О себе</string>
</resources>