<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/setting_user_foto"
            android:layout_width="@dimen/foto_account_width"
            android:layout_height="@dimen/foto_account_height"
            android:src="@drawable/user"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_name_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/settings_default_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/setting_user_foto"
            app:layout_constraintStart_toEndOf="@id/setting_user_foto"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_default_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_name_user"
            app:layout_constraintStart_toEndOf="@id/setting_user_foto"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/setting_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aккаунт"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="216dp"
        app:layout_constraintTop_toBottomOf="@id/setting_header"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_chanf_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect"
        app:layout_constraintTop_toBottomOf="@id/setting_text_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/settings_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintTop_toTopOf="@id/settings_chanf_number"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/settings_phone_lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_lable_number"
            android:textSize="@dimen/text_size14"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary"
            android:layout_marginTop="@dimen/margin_top16"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_lable"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_chanf_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/ripple_effect"
        app:layout_constraintTop_toBottomOf="@id/settings_chanf_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top16">

        <TextView
            android:id="@+id/settings_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_default_username"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/settings_chanf_username"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/settings_name_lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_username_cheng"
            android:textSize="@dimen/text_size14"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_user_name"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary"
            android:layout_marginTop="@dimen/margin_top16"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_name_lable"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_chanf_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_effect"
        app:layout_constraintTop_toBottomOf="@id/settings_chanf_username"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top16">

        <TextView
            android:id="@+id/settings_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_info"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintTop_toTopOf="@id/settings_chanf_info"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/settings_info_lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_ebaut_self"
            android:textSize="@dimen/text_size14"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_user_info"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary"
            android:layout_marginTop="@dimen/margin_top16"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_info_lable"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_chang_foto"
        android:layout_width="@dimen/camera_width55"
        android:layout_height="@dimen/camera_geight55"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:civ_border_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/setting_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_header"
        android:layout_marginEnd="@dimen/margin_end16"/>

</androidx.constraintlayout.widget.ConstraintLayout>